traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt=0
  ecritMessage(cpt)
  while (PositionFinale()==false){
    PositionSuivante()
    cpt = cpt+1
    ecritMessage(cpt)
  
  }
}

def PositionFinale():Boolean={
  if (getMondeLargeur()==getX() && getMondeHauteur()==getY()){
    return true 
  }
  return false
}

def PositionSuivante(){
  if (getX()<=5){
    if (getY()==6){
    	setPos(getX()+1,0)
    } else {
      setPos(getX(),getY()+1)
    }
  }
  if (getX()==6){
    for (k<-1 to 6){
      ecritMessage(cpt+k)
      setPos(getX(),getY()+1)
    }
  }
}
